<resources>
    <string name="app_name">Food-Reccomendation-System</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="signup">SignUp</string>
    <string name="username">UserName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hide">hide</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="workout">workout</string>
    <string name="enter_height_in_cms">Enter Height in (cms)</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_total_calories_is">Your Total Calories is:</string>
    <string name="let_s_do_your_diet">Let\'s do your diet</string>
    <string name="enter_age_in_years">Enter age in (years)</string>
    <string name="sedentary_little_or_no_exercise">Sedentary(little or no exercise)</string>
    <string name="lightly_active">Lightly active</string>
    <string name="mod_active">Moderately active</string>
    <string name="active">Active active</string>
    <string name="very_active">Very active</string>
    <string name="select_exercise_frequency">Select Exercise Frequency</string>
    <string name="info">info</string>
    <string name="empty_username">Please enter user name</string>
    <string name="empty_password">Please enter password</string>
    <string name="please_input_meal_name">Please input meal name</string>
    <string name="error">error</string>
    <string name="blank" />
    <string name="item_name">Item name:</string>
    <string name="energy_kcal">Energy(Cal):</string>
    <string name="total_carbohydrate_g">Total carbohydrate (g):</string>
    <string name="dietary_fiber_g">Dietary Fiber (g):</string>
    <string name="total_sugars_g">Total Sugars (g):</string>
    <string name="cholesterols_mg">Cholesterols (mg):</string>
    <string name="protein_g">Protein (g):</string>
    <string name="total_fat_g">Total fat (g):</string>
    <string name="calories_required">Calories Required:</string>
    <string name="get_recommended_items">Get Recommended Items</string>
</resources>