<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/appDefaultDarkText"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/appDefaultDarkText"
            android:fontFamily="@font/avenir_medium"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:shadowColor="@color/colorAccent"
            android:textColor="@color/black"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome">



        <EditText
            android:id="@+id/et_user_name"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Username"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                style="@style/Widget.AppCompat.EditText"
                android:hint="@string/password"
                android:layout_marginBottom="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="Password"
                android:inputType="textPassword" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="48dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="7dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                app:cardElevation="2dp">

                <ImageView
                    android:paddingTop="5dp"
                    android:id="@+id/imgHide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:background="@color/appDefaultItemBackground"
                    android:src="@drawable/ic_baseline_remove_red_eye_24"
                    android:contentDescription="@string/hide" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            android:text="@string/login"
            style="@style/Widget.App.LoginButton"
            android:textAllCaps="false"
            />





        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/appDefaultDarkText"
            android:fontFamily="@font/avenir_medium"
            android:text="@string/forgot_password" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>