<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.BMIActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_workout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_black"
            android:text="@string/let_s_do_your_diet"
            android:textAlignment="center"
            android:textColor="@color/appDefaultDarkText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_height"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Username"
            android:ems="10"
            android:hint="@string/enter_height_in_cms"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.EditText"
                android:hint="Enter weight in (Kgs)"
                android:layout_marginBottom="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.EditText"
            android:hint="@string/enter_age_in_years"
            android:layout_marginBottom="2dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="number" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/avenir_black"
                android:text="@string/gender"
                android:gravity="center"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="16sp"
                 />
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               android:layout_marginStart="15dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                   />


            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_exercise_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            android:focusable="false"
            android:textSize="15sp"
            android:layout_marginEnd="-12dp"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-20dp"
            app:boxStrokeColor="@color/appDefaultTransParent"
            android:fontFamily="@font/avenir_heavy">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_heavy"
                android:text="@string/select_exercise_frequency"
                android:labelFor="@+id/filled_exposed_dropdown"
                android:textSize="15sp"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/layout_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_black"
                android:text="@string/your_total_calories_is"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_calories_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_black"
                android:text="1.5"
               android:layout_alignParentEnd="true"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="18sp"
                />
        </RelativeLayout>


        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            android:text="@string/next"
            style="@style/Widget.App.LoginButton"
            android:textAllCaps="false"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>