<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_cal_rq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir_black"
                android:text="User Recommended Meals"
                android:textAlignment="center"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="16sp" />


        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir_black"
                android:text="Hi!!"
                android:textAlignment="center"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/tv_welcome"
                android:fontFamily="@font/avenir_black"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/color_427E1A"
                android:textSize="28sp" />
        </RelativeLayout>
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cal_req"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir_black"
                android:text="@string/calories_required"
                android:textAlignment="center"
                android:textColor="@color/appDefaultDarkText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_calories_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/tv_cal_req"
                android:fontFamily="@font/avenir_black"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/color_427E1A"
                android:textSize="20sp" />
        </RelativeLayout>

        <AutoCompleteTextView
            android:background="@color/white"
            android:id="@+id/tv_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_regular"
            android:hint="@string/please_input_meal_name" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:visibility="gone"
        android:text="@string/get_recommended_items"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_rv"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        />

    <include
        android:id="@+id/llProgressBar"
        layout="@layout/layout_progress_bar_without_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>